issue: header shadow too intense over reading text. fix: remove overlapping header shadows, only leave header image shadow

--- a/app/frontend/packs/styles/base/_page.scss
+++ b/app/frontend/packs/styles/base/_page.scss
@@ -34,7 +34,7 @@
 
 .header-image {
   background-color: colors.$dark;
-  box-shadow: 0 3px 5px 0 rgb(0, 0, 0, 0.3);
+  box-shadow: 0 3px 6px 0 rgb(0, 0, 0, 0.35);
   box-sizing: border-box;
   height: 300px;
   left: 0;
