--- a/app/frontend/packs/styles/components/_navbar.scss
+++ b/app/frontend/packs/styles/components/_navbar.scss
@@ -26,7 +26,6 @@ $btn-hover-animation: 0.2s;
 // Top Navbar Styles
 .navbar {
   align-items: center;
-  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.4);
   display: flex;
   height: $header-height;
   justify-content: space-between;
